fixed container height so everything else rolls behind on scroll up

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -60,7 +60,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 50px;
+  height: 150px;
   padding-top: 30px;
 }
 
